Margin on IE fixed

--- a/app/assets/stylesheets/common/dialog.css.scss
+++ b/app/assets/stylesheets/common/dialog.css.scss
@@ -379,6 +379,6 @@ $sNarrower-width: 620px;
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE10+ CSS styles go here */
   .Dialog-body .ListingContent {
-    margin-bottom: 260px;
+    margin-bottom: 200px;
   }
 }
